--- a/privacy.html
+++ b/privacy.html
@@ -28,7 +28,7 @@
     <p class="meta">Last Updated: December 2025</p>
 
     <h2>Introduction</h2>
-    <p>AmraX, developed by Abdelali El Amrani (Amrania Labs), respects your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our AmraX application (the "App").</p>
+    <p>AmraX, developed by Amrania Labs, respects your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our AmraX application (the "App").</p>
     <p>Please read this Privacy Policy carefully. If you do not agree with our policies and practices, please do not use our App.</p>
 
     <h2>1. Information We Collect</h2>
@@ -128,7 +128,7 @@
     <div class="contact">
         <p><strong>If you have questions about this Privacy Policy or our privacy practices, please contact:</strong></p>
         <p><strong>Email</strong>: <a href="mailto:support@amrania.com">support@amrania.com</a><br>
-        <strong>Developer</strong>: Abdelali El Amrani (Amrania Labs)<br>
+        <strong>Developer</strong>: Amrania Labs<br>
         <strong>Location</strong>: Morocco</p>
     </div>
 
