Update contact email in privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -127,7 +127,7 @@
     <h2>9. Contact Us</h2>
     <div class="contact">
         <p><strong>If you have questions about this Privacy Policy or our privacy practices, please contact:</strong></p>
-        <p><strong>Email</strong>: <a href="mailto:support@amrania.com">support@amrania.com</a><br>
+        <p><strong>Email</strong>: <a href="mailto:support@amrania.com">amranialabs@gmail.com</a><br>
         <strong>Developer</strong>: Amrania Labs<br>
         <strong>Location</strong>: Morocco</p>
     </div>
