--- a/privacy.html
+++ b/privacy.html
@@ -108,7 +108,7 @@
     <ul>
         <li>Export your execution data from the App settings</li>
         <li>Request deletion of your account and associated data</li>
-        <li>Contact us at <a href="mailto:amranialabs@gmail.com">support@amrania.com</a> for data requests</li>
+        <li>Contact us at <a href="mailto:amranialabs@gmail.com">amranialabs@gmail.com</a> for data requests</li>
     </ul>
 
     <h2>6. Data Retention</h2>
