Integrate Google Analytics into index.html
Added Google Analytics tracking code to the HTML.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     a { color: #0066cc; text-decoration: none; }
     a:hover { text-decoration: underline; }
   </style>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX');
+  </script>
 </head>
 <body>
   <h1>Developer website for AmraX app-ads.txt verification</h1>
